# stglance

./: .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
docs/: index.md  requirements.txt
stglance/: __init__.py  ml_explorer.py  stglance.py
